changed styles on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Hungry Cat</title>
-  <script src="https://kit.fontawesome.com/6bc129a47c.js" crossorigin="anonymous"></script>
+
   <link rel="stylesheet" href="/styles/index.css">
 
 </head>
@@ -14,10 +14,10 @@
 
     <div class='section' id="banner">
       <div>
-        <img id='logo' src='logo.svg' />
+        <img id='logo' src='/images/logo.svg' />
       </div>
       <div>
-        <img id="coverImg" src="Cover.jpg" />
+        <img id="coverImg" src="/images/cover.jpg" />
       </div>
 
       <div>
@@ -36,15 +36,19 @@
     
     <div class='section' id="controls">
       <div id="ctrlBackground">
-        <h2>Controls</h2>
-        <div>
-          <p>Jump</p>
-          <img class="keys" id="spacebar.svg" src="spacebar.svg" />
+        <div class="ctrlTitle">
+          <h2>Controls</h2>
         </div>
-        <div>
-          <p>Move</p>
-          <img class="keys" id="arrowLeft.svg" src="arrowLeft.svg" />
-          <img class="keys" id="arrowRight.svg" src="arrowRight.svg" />
+        <div class="ctrlSection">
+          <div class="control">
+            <p>Jump</p>
+            <img class="keys" id="spacebar.svg" src="/images/spacebar.svg" />
+          </div>
+          <div class="control">
+            <p>Move</p>
+            <img class="keys" id="arrowLeft.svg" src="/images/arrowLeft.svg" />
+            <img class="keys" id="arrowRight.svg" src="/images/arrowRight.svg" />
+          </div>
         </div>
       </div>
 
