--- a/public/game.html
+++ b/public/game.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Hungry Cat</title>
+  <meta name="viewport" content="width=820px, initial-scale=1.0">
   <link rel="stylesheet" href="/styles/game.css">
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 </head>
@@ -12,9 +13,9 @@
   
 <script src="/src/game.js"></script>
 
-  <a href='/'><button id="endButton">End Game</button></a> 
-  <a href='/game'><button id="restartButton">Restart Game</button></a> 
-  <div id="gameSection"></div>
+<div id="gameSection"></div>
+<a href='/'><button id="endButton">End Game</button></a> 
+<a href='/game'><button id="restartButton">Restart Game</button></a> 
 
 </body>
 
