--- a/public/index.html
+++ b/public/index.html
@@ -36,19 +36,26 @@
     
     <div class='section' id="controls">
       <div id="ctrlBackground">
+
         <div class="ctrlTitle">
           <h2>Controls</h2>
         </div>
+          <h4 class='ctrlType'>Desktop</h4>
         <div class="ctrlSection">
           <div class="control">
-            <p>Jump</p>
             <img class="keys" id="spacebar.svg" src="/images/spacebar.svg" />
+            <p>Jump</p>
           </div>
           <div class="control">
-            <p>Move</p>
             <img class="keys" id="arrowLeft.svg" src="/images/arrowLeft.svg" />
             <img class="keys" id="arrowRight.svg" src="/images/arrowRight.svg" />
+            <p>Move</p>
           </div>
+        </div>
+
+        <h4 class='ctrlType'>Mobile</h4>
+        <div class="ctrlSection">
+          <p>On-screen buttons and joystick</p>
         </div>
       </div>
 
